--- a/ACTIVIDAD FORMULARIO.csproj
+++ b/ACTIVIDAD FORMULARIO.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="MessagingToolkit.QRCode" Version="1.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
